<resources>
    <string name="app_name">GuardianChangeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sections">Section</string>
    <string name="content">Content</string>
    <string name="favorite">Favorite</string>
    <string name="news">News</string>
    <string name="logIn">Sign in</string>
    <string name="logout">Sign out</string>
    <string name="enterAsGuest">Enter as Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="signout">Sign out</string>
</resources>