<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:src="@drawable/guardi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInBtn"
        style="@style/WelcomeButtonStyle"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/logIn"
        app:layout_constraintBottom_toTopOf="@id/registerBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconImage"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/registerBt"
        style="@style/WelcomeButtonStyle"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInBtn" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/enterAsGuest"
        app:layout_constraintTop_toBottomOf="@id/registerBt" />

    <TextView
        android:id="@+id/enterAsGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/enterAsGuest"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>