<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regEmailLayout"
            android:layout_width="match_parent"
            android:theme="@style/EditTextThemeOverlay"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmailEt"
                style="@style/RegisterEditTextStyle"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextThemeOverlay"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/regEmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPassEt"
                style="@style/RegisterEditTextStyle"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            style="@style/WelcomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regPassLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>